<resources>
    <string name="app_name">TicTacToe</string>
    <string name="csc510_tic_tac_toe">CSC510 Tic Tac Toe</string>
    <string name="start">Start</string>
    <string name="top_left_box">Top Left Box</string>
    <string name="top_center_box">Top Center Box</string>
    <string name="top_right_box">Top Right Box</string>
    <string name="center_left_box">Center Left Box</string>
    <string name="center_right_box">Center Right Box</string>
    <string name="center_box">Center Box</string>
    <string name="bottom_left_box">Bottom Left Box</string>
    <string name="bottom_center_box">Bottom Center Box</string>
    <string name="status">Status</string>
    <string name="enter_the_server_ip_address">Enter the Server Ip Address</string>
    <string name="server_address">server address</string>
    <string name="bottom_right_box">Bottom Right Box</string>
    <string name="sign_in">Sign.in</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forget_password">Forget Password?</string>
    <string name="select_game">Select Game</string>
    <string name="need_an_account_sign_up">Need an Account? Sign up</string>
    <string name="let_s_play_tic_tac_toe">Let\'s play Tic Tac Toe!</string>
    <string name="game_id">Game ID</string>
    <string name="spectate_game">Spectate Game</string>
    <string name="new_game">New Game</string>
    <string name="join_game">Join Game</string>
    <string name="image_game">Image Game</string>
    <string name="submit">Submit</string>
    <string name="waiting_for_opponent">Waiting for opponent...</string>
    <string name="skip">Skip</string>
    <string-array name="Games">
        <item>"Tic Tac Toe"</item>
        <item>"Future Games"</item>
    </string-array>
</resources>